Update index.html to match Draggable Bluey

--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@
 
       <div class="game-controls">
         <div class="controls-info">
-          <p><strong>Desktop:</strong> Arrow keys to move, SPACE to pause</p>
-          <p><strong>Mobile:</strong> Touch controls below</p>
-        </div>
-
-        <div class="mobile-controls">
-          <button id="leftBtn" class="control-btn">⬅️</button>
-          <button id="pauseBtn" class="control-btn">⏸️</button>
-          <button id="rightBtn" class="control-btn">➡️</button>
+          <p><strong>Desktop:</strong> Arrow keys (or A/D) to move, SPACE to pause</p>
+          <p><strong>Mobile:</strong> Touch and drag the blue block to move</p>
         </div>
       </div>
     </div>
