Update index.html to add force refresh

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <div id="app">
     <div id="gameContainer" class="game-container">
       <header class="game-header">
-        <h1 class="game-title">Falling Bricks</h1>
+        <h1 class="game-title">
+          <a href="javascript:location.reload(true)" style="text-decoration: none; color: inherit;">
+            Falling Bricks
+          </a>
+        </h1>
         <div class="score-container">
           <div class="score-item">
             <span class="score-label">Score:</span>
