--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Falling Bricks - Survival Game</title>
-  <meta name="description" content="A challenging 2D survival game where you dodge falling bricks" />
   <meta name="theme-color" content="#3B82F6" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="Falling Bricks" />
-  <link rel="manifest" href="manifest.json" />
-  <link rel="apple-touch-icon" href="icon-192x192.png" />
-  <link rel="icon" href="icon-192x192.png" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icon-192x192.png" />
+
   <style>
     html, body {
       margin: 0;
@@ -20,6 +18,11 @@
       background: #1e3a8a;
       overflow: hidden;
     }
+
+    .canvas-container {
+      position: relative;
+    }
+
     canvas {
       width: 100vw;
       height: auto;
@@ -27,12 +30,30 @@
       display: block;
       margin: 0 auto;
       background: #1e3a8a;
+      position: relative;
+      z-index: 0;
     }
+
     .game-overlay {
-      pointer-events: none;
-    }
-    .game-overlay .overlay-content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       pointer-events: auto;
+    }
+
+    .game-overlay.hidden {
+      display: none;
+    }
+
+    .game-header h1 a {
+      color: inherit;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -41,9 +62,7 @@
     <div id="gameContainer" class="game-container">
       <header class="game-header">
         <h1 class="game-title">
-          <a href="javascript:location.reload(true)" style="text-decoration: none; color: inherit;">
-            Falling Bricks
-          </a>
+          <a href="javascript:location.reload(true)">Falling Bricks</a>
         </h1>
         <div class="score-container">
           <div class="score-item">
@@ -63,7 +82,9 @@
         <div id="gameOverlay" class="game-overlay">
           <div class="overlay-content">
             <h2 id="overlayTitle" class="overlay-title">Falling Bricks</h2>
-            <p id="overlayMessage" class="overlay-message">Dodge the falling bricks and survive as long as possible!</p>
+            <p id="overlayMessage" class="overlay-message">
+              Dodge the falling bricks and survive as long as possible!
+            </p>
             <div class="overlay-buttons">
               <button id="startBtn" class="btn btn-primary">Start Game</button>
               <button id="restartBtn" class="btn btn-secondary hidden">Restart</button>
@@ -82,7 +103,7 @@
 
       <div class="game-controls">
         <div class="controls-info">
-          <p><strong>Desktop:</strong> Arrow keys (or A/D) to move, SPACE to pause</p>
+          <p><strong>Desktop:</strong> Arrow keys or A/D to move, SPACE to pause</p>
           <p><strong>Mobile:</strong> Touch and drag the blue block to move</p>
         </div>
       </div>
@@ -105,7 +126,7 @@
       installContainer.classList.remove('hidden');
     });
 
-    installBtn.addEventListener('click', async () => {
+    installBtn?.addEventListener('click', async () => {
       if (deferredPrompt) {
         deferredPrompt.prompt();
         const { outcome } = await deferredPrompt.userChoice;
